[workspace]
resolver = "2"
members = ["distro", "distro-rootfs"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcbox-labs/distro"
authors = ["ArcBox Labs <team@arcbox.dev>", "AprilNEA <dev@aprilnea.me>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["fs", "io-util", "rt"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression / Archive
tar = "0.4"
flate2 = "1"
xz2 = "0.1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Async utilities
futures = "0.3"

# Internal
distro = { version = "0.1.0", path = "distro" }
