[package]
name = "distro-rootfs"
description = "Linux distribution rootfs extraction, caching, and lifecycle management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["linux", "rootfs", "cache", "tar", "extraction"]
categories = ["os", "filesystem"]

[dependencies]
distro = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
xz2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
