[package]
name = "distro"
description = "Linux distribution metadata, download, and verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["linux", "distro", "rootfs", "lxc", "download"]
categories = ["os", "web-programming::http-client"]

[dependencies]
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
